--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -14,3 +14,9 @@
     padding: 10px;
     margin-right: 0%;
 }
+
+.sidebar__title{
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 12px;
+}
